[build-system]
requires = [
    "setuptools>=60.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "CHILS"
version = "1.0.1"
description = "A Python wrapper for the Concurrent Hybrid Iterated Local Search (CHILS) heuristic for the Maximum Weight Independent Set problem"
authors = [{name = "Kenneth Langedal", email = "kenneth.langedal@hotmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3"
]

[project.urls]
"Homepage" = "https://github.com/KennethLangedal/CHILS"

[tool.cibuildwheel]

[[tool.cibuildwheel.overrides]]
select = "manylinux-x86_64"
before-build = "yum install -y gcc"

[[tool.cibuildwheel.overrides]]
select = "*-macos*"
before-build = "brew install gcc && brew install libomp"

[[tool.cibuildwheel.overrides]]
select = "*-win*"
before-build = "pip install delvewheel && choco install make mingw"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"
